feat: add application module

--- a/Backend/ticket/pom.xml
+++ b/Backend/ticket/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>ticket-start</module>
         <module>ticket-controller</module>
+        <module>ticket-application</module>
     </modules>
 
     <properties>
