--- a/Backend/ticket/ticket-domain/pom.xml
+++ b/Backend/ticket/ticket-domain/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ticket-controller</artifactId>
+    <artifactId>ticket-domain</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -17,11 +17,4 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.cena</groupId>
-            <artifactId>ticket-application</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-    </dependencies>
 </project>
