chore: update pom.xml (new module)

--- a/Backend/ticket/ticket-start/pom.xml
+++ b/Backend/ticket/ticket-start/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>com.cena</groupId>
             <artifactId>ticket-controller</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
